[tool.poetry]
name = "advent-code-2022-python"
version = "0.1.0"
description = "poetry file for packages dependencies"
authors = ["Hugo Rodrigues <hugorodrigues@wearepixelmatters.com>"]

[tool.poetry.dependencies]
python = "3.9.13"

# if using pip to install poetry use poetry==1.1.14

[tool.poetry.dev-dependencies]
prospector = "==1.7.7"
bandit = "==1.7.4"
black = "==22.6.0"
ipython = "==8.4.0"
mypy = "==0.971"
isort = "==5.10.1"

[tool.black]
line-length = 120
skip-string-normalization = true
